// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Free Response Nudge Messages matches snapshot 1`] = `
<Memo(NudgeMessage)
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "405335a3-7cff-4df2-a9ad-29062a4af261",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 1,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 72,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 2,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 57,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 3,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 76,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-09-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-09-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Johnpaul",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Kutch",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "d7bb95b6-5a55-4334-bac1-c606272614e6",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 1,
            },
          ],
          "copyright_holders": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 2,
            },
          ],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 32,
          "published_at": "2015-04-22T19:30:19.459Z",
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences a pseudo force of the body in motion, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Is it correct to say that a pseudo force can bring change in motion of the body?",
                  "id": "1793",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences an internal force exerted by the body itself, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Are you sure that internal forces can oppose the motion of the body? Can you recall Newton’s second law of motion?",
                  "id": "1792",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences the gravitational force exerted by the Earth, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Do you think the gravitational force which acts perpendicular to the motion of the body will oppose its motion?",
                  "id": "1791",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences a frictional force exerted by the surface, which opposes its motion",
                  "correctness": "1.0",
                  "feedback_html": "Correct! The object experiences a frictional force exerted by the surface, which opposes its motion.",
                  "id": "1790",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "495",
              "is_answer_order_important": false,
              "stem_html": "According to Newton’s First Law, a body in motion tends to remain in motion at constant velocity. However, when you slide an object across a surface, the object eventually slows down and stops. Why?",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": "",
          "tags": Array [
            ExerciseTag {
              "raw": "k12phys-ch04-s02-lo01",
            },
            ExerciseTag {
              "raw": "k12phys-ch04-ex032",
            },
            ExerciseTag {
              "raw": "practice-concepts",
            },
            ExerciseTag {
              "raw": "inbook-yes",
            },
            ExerciseTag {
              "raw": "dok2",
            },
            ExerciseTag {
              "raw": "time-short",
            },
            ExerciseTag {
              "raw": "display-free-response",
            },
          ],
          "uid": "32@1",
          "uuid": undefined,
          "version": 1,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": undefined,
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Angiosperms",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "back-end: Simple Machines",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "isLoading": false,
        "is_deleted": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "asymmetric",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 2`] = `
<Memo(NudgeMessage)
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "405335a3-7cff-4df2-a9ad-29062a4af261",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 1,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 72,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 2,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 57,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 3,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 76,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-09-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-09-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Johnpaul",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Kutch",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "d7bb95b6-5a55-4334-bac1-c606272614e6",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 1,
            },
          ],
          "copyright_holders": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 2,
            },
          ],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 32,
          "published_at": "2015-04-22T19:30:19.459Z",
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences a pseudo force of the body in motion, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Is it correct to say that a pseudo force can bring change in motion of the body?",
                  "id": "1793",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences an internal force exerted by the body itself, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Are you sure that internal forces can oppose the motion of the body? Can you recall Newton’s second law of motion?",
                  "id": "1792",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences the gravitational force exerted by the Earth, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Do you think the gravitational force which acts perpendicular to the motion of the body will oppose its motion?",
                  "id": "1791",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences a frictional force exerted by the surface, which opposes its motion",
                  "correctness": "1.0",
                  "feedback_html": "Correct! The object experiences a frictional force exerted by the surface, which opposes its motion.",
                  "id": "1790",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "495",
              "is_answer_order_important": false,
              "stem_html": "According to Newton’s First Law, a body in motion tends to remain in motion at constant velocity. However, when you slide an object across a surface, the object eventually slows down and stops. Why?",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": "",
          "tags": Array [
            ExerciseTag {
              "raw": "k12phys-ch04-s02-lo01",
            },
            ExerciseTag {
              "raw": "k12phys-ch04-ex032",
            },
            ExerciseTag {
              "raw": "practice-concepts",
            },
            ExerciseTag {
              "raw": "inbook-yes",
            },
            ExerciseTag {
              "raw": "dok2",
            },
            ExerciseTag {
              "raw": "time-short",
            },
            ExerciseTag {
              "raw": "display-free-response",
            },
          ],
          "uid": "32@1",
          "uuid": undefined,
          "version": 1,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": undefined,
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Angiosperms",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "back-end: Simple Machines",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "isLoading": false,
        "is_deleted": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "asymmetric",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Take another chance",
      },
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 3`] = `
<Memo(NudgeMessage)
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "405335a3-7cff-4df2-a9ad-29062a4af261",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 1,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 72,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 2,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 57,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 3,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 76,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-09-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-09-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Johnpaul",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Kutch",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "d7bb95b6-5a55-4334-bac1-c606272614e6",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 1,
            },
          ],
          "copyright_holders": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 2,
            },
          ],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 32,
          "published_at": "2015-04-22T19:30:19.459Z",
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences a pseudo force of the body in motion, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Is it correct to say that a pseudo force can bring change in motion of the body?",
                  "id": "1793",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences an internal force exerted by the body itself, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Are you sure that internal forces can oppose the motion of the body? Can you recall Newton’s second law of motion?",
                  "id": "1792",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences the gravitational force exerted by the Earth, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Do you think the gravitational force which acts perpendicular to the motion of the body will oppose its motion?",
                  "id": "1791",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences a frictional force exerted by the surface, which opposes its motion",
                  "correctness": "1.0",
                  "feedback_html": "Correct! The object experiences a frictional force exerted by the surface, which opposes its motion.",
                  "id": "1790",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "495",
              "is_answer_order_important": false,
              "stem_html": "According to Newton’s First Law, a body in motion tends to remain in motion at constant velocity. However, when you slide an object across a surface, the object eventually slows down and stops. Why?",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": "",
          "tags": Array [
            ExerciseTag {
              "raw": "k12phys-ch04-s02-lo01",
            },
            ExerciseTag {
              "raw": "k12phys-ch04-ex032",
            },
            ExerciseTag {
              "raw": "practice-concepts",
            },
            ExerciseTag {
              "raw": "inbook-yes",
            },
            ExerciseTag {
              "raw": "dok2",
            },
            ExerciseTag {
              "raw": "time-short",
            },
            ExerciseTag {
              "raw": "display-free-response",
            },
          ],
          "uid": "32@1",
          "uuid": undefined,
          "version": 1,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": undefined,
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Angiosperms",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "back-end: Simple Machines",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "isLoading": false,
        "is_deleted": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "asymmetric",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Not sure? Here’s a hint",
      },
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 4`] = `
<Memo(NudgeMessage)
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "405335a3-7cff-4df2-a9ad-29062a4af261",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 1,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 72,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 2,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 57,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 3,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 76,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-09-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-09-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Johnpaul",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Kutch",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "d7bb95b6-5a55-4334-bac1-c606272614e6",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 1,
            },
          ],
          "copyright_holders": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 2,
            },
          ],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 32,
          "published_at": "2015-04-22T19:30:19.459Z",
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences a pseudo force of the body in motion, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Is it correct to say that a pseudo force can bring change in motion of the body?",
                  "id": "1793",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences an internal force exerted by the body itself, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Are you sure that internal forces can oppose the motion of the body? Can you recall Newton’s second law of motion?",
                  "id": "1792",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences the gravitational force exerted by the Earth, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Do you think the gravitational force which acts perpendicular to the motion of the body will oppose its motion?",
                  "id": "1791",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences a frictional force exerted by the surface, which opposes its motion",
                  "correctness": "1.0",
                  "feedback_html": "Correct! The object experiences a frictional force exerted by the surface, which opposes its motion.",
                  "id": "1790",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "495",
              "is_answer_order_important": false,
              "stem_html": "According to Newton’s First Law, a body in motion tends to remain in motion at constant velocity. However, when you slide an object across a surface, the object eventually slows down and stops. Why?",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": "",
          "tags": Array [
            ExerciseTag {
              "raw": "k12phys-ch04-s02-lo01",
            },
            ExerciseTag {
              "raw": "k12phys-ch04-ex032",
            },
            ExerciseTag {
              "raw": "practice-concepts",
            },
            ExerciseTag {
              "raw": "inbook-yes",
            },
            ExerciseTag {
              "raw": "dok2",
            },
            ExerciseTag {
              "raw": "time-short",
            },
            ExerciseTag {
              "raw": "display-free-response",
            },
          ],
          "uid": "32@1",
          "uuid": undefined,
          "version": 1,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": undefined,
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Angiosperms",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "back-end: Simple Machines",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "isLoading": false,
        "is_deleted": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "asymmetric",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Try again",
      },
      "validate": [MockFunction],
    }
  }
/>
`;

exports[`Free Response Nudge Messages matches snapshot 5`] = `
<Memo(NudgeMessage)
  course={
    Course {
      "appearance_code": "college_physics",
      "book_pdf_url": "https://archive.cnx.org/exports/185cbf87-c72e-48f5-b51e-f14f21b5eabd.pdf",
      "cloned_from_id": null,
      "current_role_id": 1,
      "default_due_time": "07:00",
      "default_open_time": "00:32",
      "does_cost": false,
      "ecosystem_book_uuid": "405335a3-7cff-4df2-a9ad-29062a4af261",
      "ecosystem_id": 1,
      "ends_at": "2017-11-14T13:00:00.000Z",
      "homework_progress_weight": 0.1,
      "homework_score_weight": 0.4,
      "homework_weight": 0.5,
      "id": 1,
      "is_access_switchable": true,
      "is_active": true,
      "is_college": true,
      "is_concept_coach": false,
      "is_lms_enabled": undefined,
      "is_lms_enabling_allowed": false,
      "is_preview": false,
      "just_created": false,
      "map": undefined,
      "name": "College Physics",
      "offering_id": 1,
      "periods": Array [
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 1,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 72,
          "teacher_student_role_id": 1,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 2,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 57,
          "teacher_student_role_id": 2,
        },
        CoursePeriod {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "periods",
          "default_due_time": "07:00",
          "default_open_time": "00:01",
          "enrollment_code": "25790",
          "enrollment_url": "http://localhost:3001/enroll/25790",
          "id": 3,
          "is_archived": false,
          "name": "1st",
          "num_enrolled_students": 76,
          "teacher_student_role_id": 3,
        },
      ],
      "reading_progress_weight": 0.2,
      "reading_score_weight": 0.2,
      "reading_weight": 0.5,
      "roles": Array [
        CourseRole {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "roles",
          "id": 1,
          "joined_at": 2017-09-21T12:00:00.000Z,
          "period_id": undefined,
          "research_identifier": undefined,
          "type": "student",
        },
      ],
      "salesforce_book_name": "College Physics",
      "starts_at": "2017-09-14T12:00:00.000Z",
      "students": Array [
        CourseStudent {
          "$nonSerializable": Object {
            "course": true,
          },
          "course": [Circular],
          "course_association_name": "students",
          "first_name": "Johnpaul",
          "id": 1,
          "is_active": true,
          "is_comped": false,
          "is_paid": false,
          "is_refund_allowed": undefined,
          "is_refund_pending": undefined,
          "last_name": "Kutch",
          "name": undefined,
          "payment_due_at": 2017-10-17T12:00:00.000Z,
          "period_id": undefined,
          "prompt_student_to_pay": false,
          "role_id": 1,
          "roster": undefined,
          "student_identifier": "",
          "uuid": undefined,
        },
      ],
      "term": "spring",
      "time_zone": "Central Time (US & Canada)",
      "uuid": "d7bb95b6-5a55-4334-bac1-c606272614e6",
      "webview_url": "https://qa.cnx.org/contents/185cbf87-c72e-48f5-b51e-f14f21b5eabd",
      "year": 2017,
    }
  }
  step={
    StudentTaskStep {
      "$nonSerializable": Object {
        "task": true,
      },
      "answer_id": undefined,
      "content": StudentTaskExerciseStep {
        "_page": undefined,
        "average_step_number": undefined,
        "book": undefined,
        "content": Exercise {
          "$nonSerializable": Object {
            "wrapper": true,
          },
          "attachments": Array [],
          "authors": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 1,
            },
          ],
          "copyright_holders": Array [
            ExerciseAuthor {
              "name": undefined,
              "user_id": 2,
            },
          ],
          "id": undefined,
          "is_vocab": undefined,
          "nickname": undefined,
          "number": 32,
          "published_at": "2015-04-22T19:30:19.459Z",
          "questions": Array [
            ExerciseQuestion {
              "$nonSerializable": Object {
                "exercise": true,
              },
              "answers": Array [
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences a pseudo force of the body in motion, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Is it correct to say that a pseudo force can bring change in motion of the body?",
                  "id": "1793",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences an internal force exerted by the body itself, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Are you sure that internal forces can oppose the motion of the body? Can you recall Newton’s second law of motion?",
                  "id": "1792",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences the gravitational force exerted by the Earth, which opposes its motion",
                  "correctness": "0.0",
                  "feedback_html": "Do you think the gravitational force which acts perpendicular to the motion of the body will oppose its motion?",
                  "id": "1791",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
                ExerciseAnswer {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "content_html": "The object experiences a frictional force exerted by the surface, which opposes its motion",
                  "correctness": "1.0",
                  "feedback_html": "Correct! The object experiences a frictional force exerted by the surface, which opposes its motion.",
                  "id": "1790",
                  "question": [Circular],
                  "question_association_name": "answers",
                },
              ],
              "collaborator_solutions": Array [],
              "exercise": [Circular],
              "exercise_association_name": "questions",
              "formats": Array [
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "multiple-choice",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
                ExerciseFormat {
                  "$nonSerializable": Object {
                    "question": true,
                  },
                  "_format": "free-response",
                  "question": [Circular],
                  "question_association_name": "formats",
                },
              ],
              "hints": Array [],
              "id": "495",
              "is_answer_order_important": false,
              "stem_html": "According to Newton’s First Law, a body in motion tends to remain in motion at constant velocity. However, when you slide an object across a surface, the object eventually slows down and stops. Why?",
              "stimulus_html": "",
            },
          ],
          "stimulus_html": "",
          "tags": Array [
            ExerciseTag {
              "raw": "k12phys-ch04-s02-lo01",
            },
            ExerciseTag {
              "raw": "k12phys-ch04-ex032",
            },
            ExerciseTag {
              "raw": "practice-concepts",
            },
            ExerciseTag {
              "raw": "inbook-yes",
            },
            ExerciseTag {
              "raw": "dok2",
            },
            ExerciseTag {
              "raw": "time-short",
            },
            ExerciseTag {
              "raw": "display-free-response",
            },
          ],
          "uid": "32@1",
          "uuid": undefined,
          "version": 1,
          "versions": Array [],
          "wrapper": [Circular],
          "wrapper_association_name": "content",
        },
        "context": undefined,
        "course": undefined,
        "ecosystem_id": undefined,
        "has_interactive": false,
        "has_video": false,
        "id": 1,
        "isSelected": false,
        "is_excluded": false,
        "page_uuid": false,
        "pool_types": Array [],
        "preview": undefined,
        "question_stats": Array [],
        "related_content": Array [
          RelatedContent {
            "chapter_section": ChapterSection {
              "chapter": 1,
              "section": 2,
            },
            "page_id": undefined,
            "title": "Angiosperms",
            "uuid": undefined,
          },
        ],
        "tags": Array [],
        "url": "",
      },
      "correct_answer_id": undefined,
      "external_url": null,
      "feedback_html": undefined,
      "formats": Array [
        "multiple-choice",
        "free-response",
      ],
      "free_response": undefined,
      "group": undefined,
      "id": 1,
      "isFetched": true,
      "is_completed": false,
      "labels": Array [],
      "multiPartGroup": undefined,
      "preview": "back-end: Simple Machines",
      "response_validation": Object {},
      "spy": Object {},
      "task": StudentTask {
        "complete": undefined,
        "description": undefined,
        "due_at": 2017-10-17T12:00:00.000Z,
        "feedback_at": undefined,
        "id": 1,
        "isLoading": false,
        "is_deleted": undefined,
        "spy": Object {},
        "steps": Array [
          [Circular],
        ],
        "students": Array [],
        "tasksMap": Object {},
        "title": "asymmetric",
        "type": "homework",
      },
      "task_association_name": "steps",
      "type": "exercise",
      "uid": "1@1",
    }
  }
  ux={
    ResponseValidationUX {
      "advanceUI": [MockFunction],
      "displayNudgeError": true,
      "nudge": Object {
        "Message": [Function],
        "title": "Give it another shot",
      },
      "validate": [MockFunction],
    }
  }
/>
`;
